--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 <!--消息列表-->
 <div class="main-box z-index-top">
     <ul>
-        <li class="message-list"></li>
-        <li class="contacts-list"></li>
-        <li class="my-zone">
+        <li class="message-list hidden"></li>
+        <li class="contacts-list hidden"></li>
+        <li class="my-zone hidden">
             <div class="my-background"><img class="img-circle my-head upload-avatar" src="./images/chat.png"/></div>
             <div class="username"></div>
         </li>
