--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 <script type="text/javascript" src="./js/LjkUpload.js?v=0.1"></script>
 <script type="text/javascript" src="./js/html5ImgCompress/html5ImgCompress.min.js"></script>
 <script type="text/javascript" src="./js/adapter.js"></script>
-<script type="text/javascript" src="./js/index.js?v=1.32"></script>
+<script type="text/javascript" src="./js/msgpack.min.js"></script>
+<script type="text/javascript" src="./js/index.js?v=1.33"></script>
 </body>
 </html>
